--- a/src/styled/components/accordion.css
+++ b/src/styled/components/accordion.css
@@ -25,16 +25,23 @@
           @apply bg-content-100;
         }
       }
-      &:checked, &:focus-visible {
-        & + .accordion-title {
-          @apply rounded-b-none bg-content-100 mt-1;
-          &:before{
-            @apply bg-transparent;
-          }
-        }
-        & ~ .accordion-body {
-          @apply bg-content-100 rounded-t-none pb-4 mb-1;
-        }
+      &:checked + .accordion-title {
+        @apply rounded-b-none bg-content-100 mt-1;
+      }
+      &:focus-visible + .accordion-title {
+        @apply rounded-b-none bg-content-100 mt-1;
+      }
+      &:checked + .accordion-title:before{
+        @apply bg-transparent;
+      }
+      &:focus-visible + .accordion-title:before{
+        @apply bg-transparent;
+      }
+      &:checked ~ .accordion-body {
+        @apply bg-content-100 rounded-t-none pb-4 mb-1;
+      }
+      &:focus-visible ~ .accordion-body {
+        @apply bg-content-100 rounded-t-none pb-4 mb-1;
       }
     }
   }
@@ -54,15 +61,17 @@
         @apply rounded-none;
       }
       @apply border border-content-200 mb-2;
-      input {
-        &:checked, &:focus-visible {
-          & + .accordion-title {
-            @apply mt-0;
-          }
-          & ~ .accordion-body {
-            @apply mb-0;
-          }
-        }
+      & input:checked + .accordion-title {
+        @apply mt-0;
+      }
+      & input:focus-visible + .accordion-title {
+        @apply mt-0;
+      }
+      & input:checked ~ .accordion-body {
+        @apply mb-0;
+      }
+      & input:focus-visible ~ .accordion-body {
+        @apply mb-0;
       }
     }
   }
